updating fields and other fixes
