# swagger.json
@@ -21,7 +21,7 @@
       "description": "APIs for nurses"
     },
     {
-      "name": "Administrators",
+      "name": "Admins",
       "description": "APIs for administrators"
     }
   ],
@@ -79,7 +79,7 @@
                   "type": "string",
                   "example": "R41. 3"
                 },
-                "drNpi": {
+                "npi": {
                   "type": "string",
                   "example": "6155382000"
                 }
@@ -173,7 +173,7 @@
                   "type": "string",
                   "example": "R41. 3"
                 },
-                "drNpi": {
+                "npi": {
                   "type": "string",
                   "example": "6155382000"
                 }
@@ -270,9 +270,6 @@
         "responses": {
           "200": {
             "description": "OK"
-          },
-          "412": {
-            "description": "Precondition Failed"
           }
         }
       }
